Release 1.20.5-rc1 (snapshot)